--- a/cleaning A and E.Rmd
+++ b/cleaning A and E.Rmd
@@ -2,15 +2,22 @@
 title: "Cleaning Angrist and Evans 1998"
 author: "Ed Jee"
 date: "22 January 2019"
-output: html_document
+output:
+    html_document:
+      code_folding: show
+      highlight: tango
+      theme: readable
+      toc: yes
+      toc_float: yes
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE,
+                      cache = TRUE)
 ```
 
 # Importing and cleaning 1990 Census Data
-```{r}
+```{r data_import}
 library(haven)
 library(dplyr)
 library(tidylog, warn.conflicts = FALSE)
@@ -20,82 +27,106 @@ df_90 <- read_sas("AngEv98/AngEv98/m_d_903.sas7bdat")
 
 
 Cleaning data according to Angrist and Evans SAS replication codes:
-```{r}
+```{r data_cleaning}
+
+clean_angrist_evans_data <- function(dataset){
+  df_clean <- dataset %>% 
+    filter((AGEM <= 35) & (AGEM >= 21)) %>% 
+    filter(KIDCOUNT >= 2) %>% 
+    filter(AGE2NDK >= 1) %>% 
+    filter(AAGE == "0" & AAGE2ND == "0" & ASEX == "0" & ASEX2ND == "0") %>% 
+    mutate(SEXK = as.numeric(SEXK),
+           SEX2NDK = as.numeric(SEX2NDK),
+           WEEK89D = as.numeric(WEEK89D),
+           WEEK89M = as.numeric(WEEK89M),
+           FERTIL = as.numeric(FERTIL)) %>% 
+    mutate(fertdif = as.numeric(KIDCOUNT) - (FERTIL - 1),
+           agefstm = as.numeric(AGEM) - as.numeric(AGEK)) %>% 
+    filter(agefstm >= 15) %>% 
+    filter(PWGTM1 > 0) %>% 
+    mutate(samesex = (SEXK == SEX2NDK),
+           morekids = (KIDCOUNT > 2)) %>% 
+    rename_all(tolower)
+  return(df_clean)
+}
 df_90_clean <- df_90 %>%
-  filter((AGEM <= 35) & (AGEM >= 21)) %>% 
-  filter(KIDCOUNT >= 2) %>% 
-  filter(AGE2NDK >= 1) %>% 
-  filter(AAGE == "0" & AAGE2ND == "0" & ASEX == "0" & ASEX2ND == "0") %>% 
-  mutate(SEXK = as.numeric(SEXK),
-         SEX2NDK = as.numeric(SEX2NDK),
-         WEEK89D = as.numeric(WEEK89D),
-         WEEK89M = as.numeric(WEEK89M),
-         FERTIL = as.numeric(FERTIL)) %>% 
-  mutate(fertdif = as.numeric(KIDCOUNT) - (FERTIL - 1),
-         agefstm = as.numeric(AGEM) - as.numeric(AGEK)) %>% 
-  filter(agefstm >= 15) %>% 
-  filter(PWGTM1 > 0) %>% 
-  mutate(samesex = (SEXK == SEX2NDK),
-         morekids = (KIDCOUNT > 2)) %>% 
-  rename_all(tolower)
+  clean_angrist_evans_data()
 
-
+rm(df_90)
 ```
 
 # Replicating Results
 
-```{r}
-df_90_subset <- df_90_clean %>% 
-  rename(kid_age = agek,
-         kid2_age = age2ndk,
-         m_age = agem,
-         d_age = aged) %>% 
-  select(-starts_with("a")) %>% 
-  mutate_at(c("racek",
-              "birthplk",
-              "schoolk",
-              "state",
-              "hispm",
-              "hispd",
-              "poverty",
-              "pobm",
-              "hispd",
-              "pobd",
-              "hispk"), factor) %>% 
-  mutate_if(is.character, as.numeric)
+```{r data_transforming}
+
+transform_clean_angrist_evans <- function(dataset) {
+  transformed_df <- dataset %>%
+    rename(
+      kid_age = agek,
+      kid2_age = age2ndk,
+      m_age = agem,
+      d_age = aged
+    ) %>%
+    select(-starts_with("a")) %>%
+    mutate_at(c(
+      "racek",
+      "birthplk",
+      "schoolk",
+      "state",
+      "hispm",
+      "hispd",
+      "poverty",
+      "pobm",
+      "hispd",
+      "pobd",
+      "hispk"
+    ), factor) %>%
+    mutate_if(is.character, as.numeric) %>%
+    mutate(
+      boy1st = (sexk == 0),
+      boy2nd = (sex2ndk == 0),
+      boys2 = (sexk == 0) & (sex2ndk == 0),
+      girls2 = (sexk == 1) & (sex2ndk == 1),
+      samesex = boys2 | girls2,
+      morekids = kidcount > 2,
+      black_m = (racem == 2),
+      hisp_m = (racem == 12),
+      white_m = (racem == 01),
+      other_race_m = 1 - black_m - hisp_m - white_m,
+      black_d = (raced == 2),
+      hisp_d = (raced == 12),
+      white_d = (raced == 1),
+      other_race_d = 1 - black_d - hisp_d - white_d,
+      worked_m = (week89m > 0),
+      worked_d = (week89d > 0)
+    )
+
+  return(transformed_df)
+}
+
+df_90_subset <- df_90_clean %>%
+  transform_clean_angrist_evans()
+
   
   
   
 df_90_final <- df_90_subset %>% 
-  mutate(boy1st = (sexk == 0),
-         boy2nd = (sex2ndk == 0),
-         boys2 = (sexk == 0) & (sex2ndk == 0),
-         girls2 = (sexk == 1) & (sex2ndk == 1),
-         samesex = boys2 | girls2,
-         morekids = kidcount > 2,
-         black_m = (racem == 2),
-         hisp_m = (racem == 12),
-         white_m = (racem == 01),
-         other_race_m = 1 - black_m - hisp_m - white_m,
-         black_d = (raced == 2),
-         hisp_d = (raced == 12),
-         white_d = (raced == 1),
-         other_race_d = 1 - black_d - hisp_d - white_d,
-         worked_m = (week89m > 0),
-         worked_d = (week89d > 0),
+  mutate(
          income_m = 1.2883*(incomem1 + pmax(0, incomem2)),
          income_d = (incomed1 + pmax(0, incomed2)),
          fam_inc = pmax(faminc*1.2883, 1),
          nonmoi = fam_inc - incomem1*1.2883,
-         nonmomil = log(pmax(1, nonmoi)))
+         nonmomil = log(pmax(1, nonmoi))
+  )
 
+rm(df_90_clean, df_90_subset)
 ```
 
 
 ## Table Two Summary Statistics
 
 Trying to recreate table 2
-```{r}
+```{r table_2}
 library(tidyr)
 df_90_final %>% 
   summarise(children_ever_born = mean(fertil - 1),
@@ -121,7 +152,7 @@ df_90_final %>%
 ## Regression Results
 
 Recreating Table 5
-```{r, results="asis"}
+```{r table_5, results = "asis"}
 library(AER)
 library(stargazer)
 worked_90 <- ivreg(worked_m ~ morekids | samesex, data = df_90_final)
@@ -136,13 +167,25 @@ stargazer(worked_90,
           income_90,
           fam_income_90,
           omit = "Constant",
-          title = "WALD ESTIMATES OF LABOR-SUPPLY MODELS 1990 DATA - REPLICATED")
+          title = "WALD ESTIMATES OF LABOR-SUPPLY MODELS 1990 DATA - REPLICATED",header = FALSE,type = "html",
+          dep.var.labels = c("Worked",
+                            "Weeks",
+                            "Hours",
+                            "Income",
+                            "Family Income"))
+
+
+rm(worked_90,
+   weeks_90,
+   hours_90,
+   income_90,
+   fam_income_90)
 ```
 
 
 
 Now table 6
-```{r, results = "asis"}
+```{r table_6, results = "asis"}
 library(purrr)
 create_model_formula <- function(dependent_var){
   model <- as.formula(paste0(dependent_var, "~ morekids + m_age + boy1st + boy2nd + black_m + hisp_m + other_race_m | samesex +  m_age + boy1st + boy2nd + black_m + hisp_m + other_race_m"))
@@ -157,14 +200,23 @@ table_6_models <- c("worked_m",
   map(~(create_model_formula(.) %>% 
           ivreg(data = df_90_final)))
 
-stargazer(table_6_models, keep = "morekidsTRUE", title = "2SLS ESTIMATES OF LABOR-SUPPLY MODELS USING 1990 CENSUS DATA - REPLICATION", note = "Age at first birth omitted since I can't seem to find it.")
+stargazer(table_6_models, keep = "morekidsTRUE",
+          title = "2SLS ESTIMATES OF LABOR-SUPPLY MODELS USING 1990 CENSUS DATA - REPLICATION",
+          note = "Age at first birth omitted since I can't seem to find it.",
+          dep.var.labels = c("Worked",
+                            "Weeks",
+                            "Hours",
+                            "Income",
+                            "Family Income"),
+          type = "html")
+rm(table_6_models)
 ```
 
 
 # Checking First Stage
 
 
-```{r}
+```{r first_stage_sims}
 library(margins)
 x <- rnorm(100) + 3
 D <- rbinom(100, size = 1, 0.5)
@@ -175,11 +227,10 @@ D_yes <- lm(y ~ x, data = df_sim %>% filter(D == 1))
 D_no <- lm(y ~ x, data = df_sim %>% filter(D ==0)) 
 D_int <- lm(y ~ x  +D+ x*D, data = df_sim) 
 
-
 ```
 
 
-```{r}
+```{r first_stage_sim_results}
 head(dydx(data = df_sim, D_int, "x"))
 
 
@@ -189,17 +240,173 @@ df_sim_margins <- margins(data = df_sim, D_int, "x", unit_ses = TRUE) %>%
          dydx_high = dydx_x + 1.96*SE_dydx_x)
   
 df_sim_margins %>% head()
+rm(x,
+   D,
+   y,
+   df_sim,
+   D_yes,
+   D_no,
+   D_int,
+   df_sim_margins)
 ```
 
 
 
 
 
-```{r}
+```{r first_stage_functions}
 
 ##TODO: Propagate dydx to entire dataset?
 library(Rfast)
+
 find_SEs <- function(model_data_no_y, model_vcov, instrument){
+  model_data_no_y <- model_data_no_y %>% 
+    rename("instrument" = instrument)
+  model_formula <- as.formula(paste0("~", "instrument", "*."))
+  
+  model_matrix <- model_data_no_y %>% 
+    mutate(instrument = 1) %>% 
+    model.matrix(model_formula, data = .)
+  
+  gradient_matrix_kinda <- model_matrix %>%
+    as_tibble() %>% 
+    distinct() %>% 
+  mutate_at(vars(-contains(":")), ~(. = 0)) %>% 
+    mutate(instrument = 1) %>% 
+  as.matrix()
+  
+  split_indices <- seq(from = 1, to = nrow(gradient_matrix_kinda), by = 10000) %>% 
+    c(nrow(gradient_matrix_kinda))
+  
+  if (length(split_indices) < 3){
+    vcov_dydx_intermediate <- Rfast::mat.mult(gradient_matrix_kinda, model_vcov)
+    vcov_dydx <- Rfast::mat.mult(vcov_dydx_intermediate,
+                                 Rfast::transpose(gradient_matrix_kinda))
+    SE_dydx <- sqrt(diag(vcov_dydx))
+    
+  } else {
+    baby_SE <- matrix(nrow = nrow(gradient_matrix_kinda), ncol = 1)
+    for (i in 1:(length(split_indices)-1)){
+      baby_matrix <- gradient_matrix_kinda[split_indices[[i]]:split_indices[[i+1]], ]
+      print(paste0(split_indices[i],"to", split_indices[i+1]))
+      
+      baby_vcov <- Rfast::mat.mult(baby_matrix, model_vcov)
+      baby_vcov <- Rfast::mat.mult(baby_vcov, Rfast::transpose(baby_matrix))
+      baby_SE[split_indices[[i]]:split_indices[[i+1]], ] <- sqrt(diag(baby_vcov))
+      i <- i + 1
+    }
+    SE_dydx <- baby_SE[, 1]
+  }
+
+  return(SE_dydx)
+    
+} 
+run_first_stage_interactions_fast <- function(dataset, dependent_variable, instrument){
+  dataset <- dataset %>% 
+    rename("instrument" = instrument)
+  model_formula <- as.formula(paste0(dependent_variable,  "~ ", "instrument", "*."))
+  first_stage_fit <- lm(data = dataset, formula = model_formula)
+  degrees_freedom <- first_stage_fit$df.residual
+  dydx_margins <- dydx(data = dataset,
+                       model = first_stage_fit,
+                       variable = "instrument") %>% pull()
+  dataset_unique <- dataset %>% 
+    select(-dependent_variable, -instrument) %>% 
+    distinct() %>% 
+    mutate(instrument = TRUE)
+  first_stage_margins <- dydx(model = first_stage_fit, data = dataset_unique, variable = "instrument") 
+  df_margins <- bind_cols(first_stage_margins %>% 
+                            select(contains("dydx")),
+                          dataset_unique) %>% 
+    as_tibble()
+  df_margins$SE_dydx_instrument <- find_SEs(dataset_unique, vcov(first_stage_fit), instrument)
+  
+  df_margins <- df_margins %>% 
+    mutate(dydx_lo = dydx_instrument - qt(0.975, degrees_freedom) * SE_dydx_instrument,
+           dydx_hi = dydx_instrument + qt(0.975, degrees_freedom) * SE_dydx_instrument,
+           t_stat = dydx_instrument/SE_dydx_instrument,
+           pval_one_neg = pt(t_stat, degrees_freedom),
+           pval_holm = p.adjust(pval_one_neg, method = "holm"))
+  return(df_margins)
+}
+
+
+```
+
+
+
+```{r run_first_stage_AE}
+
+
+test_data <- df_90_final %>% 
+  select(samesex,
+         morekids,
+         black_m,
+         hisp_m,
+         other_race_m,
+         black_d,
+         hisp_d,
+         other_race_d,
+         yearschm,
+         yearschd, 
+         m_age,
+         d_age,
+         pwgtm1,
+         pwgtd1) %>% 
+  na.omit()
+
+# tictoc::tic()
+# first_stage_margins <- test_data %>% 
+#   run_first_stage_interactions(dataset = ., dependent_variable = "morekids", instrument = "samesex")
+# tictoc::toc()
+
+
+
+tictoc::tic()
+first_stage_interactions <- test_data %>% 
+  run_first_stage_interactions_fast(dataset = .,
+                                   dependent_variable = "morekids",
+                                   instrument = "samesex")
+
+tictoc::toc()
+
+
+
+```
+
+
+testing old stuff
+```{r old_stuff, eval = FALSE, echo = FALSE}
+
+run_first_stage_interactions_fast_slow_SE <- function(dataset, dependent_variable, instrument){
+  dataset <- dataset %>% 
+    rename("instrument" = instrument)
+  model_formula <- as.formula(paste0(dependent_variable,  "~ ", "instrument", "*."))
+  first_stage_fit <- lm(data = dataset, formula = model_formula)
+  degrees_freedom <- first_stage_fit$df.residual
+  dydx_margins <- dydx(data = dataset,
+                       model = first_stage_fit,
+                       variable = "instrument") %>% pull()
+  dataset_unique <- dataset %>% 
+    select(-dependent_variable, -instrument) %>% 
+    distinct() %>% 
+    mutate(instrument = TRUE)
+  first_stage_margins <- dydx(model = first_stage_fit, data = dataset_unique, variable = "instrument") 
+  df_margins <- bind_cols(first_stage_margins %>% 
+                            select(contains("dydx")),
+                          dataset_unique) %>% 
+    as_tibble()
+  df_margins$SE_dydx_instrument <- find_SEs_slow(dataset_unique, vcov(first_stage_fit), instrument)
+  
+  df_margins <- df_margins %>% 
+    mutate(dydx_lo = dydx_instrument - qt(0.975, degrees_freedom) * SE_dydx_instrument,
+           dydx_hi = dydx_instrument + qt(0.975, degrees_freedom) * SE_dydx_instrument,
+           t_stat = dydx_instrument/SE_dydx_instrument,
+           pval_one_neg = pt(t_stat, degrees_freedom))
+  return(df_margins)
+}
+
+find_SEs_slow <- function(model_data_no_y, model_vcov, instrument){
   model_data_no_y <- model_data_no_y %>% 
     rename("instrument" = instrument)
   model_formula <- as.formula(paste0("~", "instrument", "*."))
@@ -221,6 +428,7 @@ find_SEs <- function(model_data_no_y, model_vcov, instrument){
   return(SE_dydx)
     
 } 
+
 
 run_first_stage_interactions_slow <- function(dataset, dependent_variable, instrument){
   dataset <- dataset %>% 
@@ -249,78 +457,22 @@ run_first_stage_interactions_slow <- function(dataset, dependent_variable, instr
 }
 
 
-run_first_stage_interactions_fast <- function(dataset, dependent_variable, instrument){
-  dataset <- dataset %>% 
-    rename("instrument" = instrument)
-  model_formula <- as.formula(paste0(dependent_variable,  "~ ", "instrument", "*."))
-  first_stage_fit <- lm(data = dataset, formula = model_formula)
-  degrees_freedom <- first_stage_fit$df.residual
-  dydx_margins <- dydx(data = dataset,
-                       model = first_stage_fit,
-                       variable = "instrument") %>% pull()
-  dataset_unique <- dataset %>% 
-    select(-dependent_variable, -instrument) %>% 
-    distinct() %>% 
-    mutate(instrument = TRUE)
-  first_stage_margins <- dydx(model = first_stage_fit, data = dataset_unique, variable = "instrument") 
-  df_margins <- bind_cols(first_stage_margins %>% 
-                            select(contains("dydx")),
-                          dataset_unique) %>% 
-    as_tibble()
-  df_margins$SE_dydx_instrument <- find_SEs(dataset_unique, vcov(first_stage_fit), instrument)
-  
-  df_margins <- df_margins %>% 
-    mutate(dydx_lo = dydx_instrument - qt(0.975, degrees_freedom) * SE_dydx_instrument,
-           dydx_hi = dydx_instrument + qt(0.975, degrees_freedom) * SE_dydx_instrument,
-           t_stat = dydx_instrument/SE_dydx_instrument,
-           pval_one_neg = pt(t_stat, degrees_freedom))
-  return(df_margins)
-}
 
+test <- test_data %>% 
+  run_first_stage_interactions_fast_slow_SE(dataset = ., 
+                                    dependent_variable = "morekids",
+                                    instrument = "samesex")
 
+all_equal(first_stage_interactions, test)
 ```
 
 
 
-```{r}
-
-
-test_data <- df_90_final %>% 
-  select(samesex,
-         morekids,
-         black_m,
-         hisp_m,
-         other_race_m,
-         black_d,
-         hisp_d,
-         other_race_d,
-         yearschm,
-         yearschd, 
-         m_age) %>% 
-  na.omit()
-
-# tictoc::tic()
-# first_stage_margins <- test_data %>% 
-#   run_first_stage_interactions(dataset = ., dependent_variable = "morekids", instrument = "samesex")
-# tictoc::toc()
-
-
-
-
-tictoc::tic()
-first_stage_interactions <- test_data %>% 
-  run_first_stage_interactions_fast(dataset = .,
-                                   dependent_variable = "morekids",
-                                   instrument = "samesex")
-tictoc::toc()
-```
-
-
-```{r}
+```{r plotting_first_stage_interactions}
 library(ggplot2)
 library(scales)
 first_stage_interactions %>% 
-  filter(pval_one_neg < 0.1)
+  filter(pval_one_neg < 0.1 | pval_holm < 0.1)
 
 first_stage_interactions %>% 
   ggplot(aes(x = dydx_instrument)) +
@@ -331,12 +483,22 @@ first_stage_interactions %>%
   geom_histogram()
 
 first_stage_interactions %>% 
+  sample_frac(0.25) %>% 
   arrange(dydx_instrument) %>% 
   mutate(rank = row_number()) %>% 
   ggplot(aes(x = rank, y = dydx_instrument, ymin = dydx_lo, ymax = dydx_hi)) +
   geom_point() +
-  geom_ribbon(alpha = 0.1)
+  geom_ribbon(alpha = 0.1) +
+  theme_minimal()
 
+
+
+
+```
+
+
+
+```{r plotting_interactions_two}
 negative_log_trans <- function(base = exp(1)) {
     trans <- function(x) -log(x, base)
     inv <- function(x) base^(-x)
@@ -347,6 +509,7 @@ negative_log_trans <- function(base = exp(1)) {
 
 
 first_stage_interactions %>% 
+  sample_frac(0.25) %>% 
   ggplot(aes(sample = pval_one_neg)) +
   stat_qq(distribution = qunif) +
   geom_abline(intercept = 0, slope = 1) +
@@ -368,24 +531,11 @@ first_stage_interactions %>%
 # Random Forest
 
 
-```{r}
+```{r random_forest_run}
 library(grf)
+library(modelr)
 N_obs <- 10000
-df_rf <- df_90_prepared %>% 
-  select(sex2ndk,
-         multi2nd,
-         kid2_age,
-         sexk,
-         kid_age,
-         pwgtk1,
-         yearschk,
-         yearschm,
-         yearschd,
-         twin1st,
-         m_age,
-         samesex,
-         morekids) %>% 
-  na.omit() %>% 
+df_rf <- test_data %>% 
   sample_n(N_obs)
 
 X_matrix <- df_rf %>% 
@@ -397,8 +547,12 @@ forest_first_stage <- causal_forest(X = X_matrix,
                                     W = df_rf$samesex,
                                     num.trees = 4000) 
 tau_hat_oob <- predict(forest_first_stage, estimate.variance = TRUE) %>% as_tibble()
-hist(tau_hat_oob$predictions)
-library(ggplot2)
+
+```
+
+```{r random_forest_plots}
+
+
 ggplot(tau_hat_oob, aes(x = predictions)) +
   geom_histogram()
 
@@ -409,103 +563,48 @@ tau_hat_results <- tau_hat_oob %>%
          prediction_hi = predictions + 1.96*sigma_hat,
          t_stat = predictions / sigma_hat,
          critical_value = qt(0.95, N_obs - 13, lower.tail = FALSE),
-         reject_h0 = ifelse(t_stat < critical_value, 1, 0),
+         pval = pt(t_stat, df = N_obs - 13),
+         pval_holm = p.adjust(pval, method = "holm"),
+         reject_H0 = ifelse(pval_holm < 0.1, 1, 0),
          rank = row_number())
 
 tau_hat_results %>% 
   ggplot(aes(x = rank, y = predictions, ymin = prediction_lo, ymax = prediction_hi)) + 
-  geom_point(aes(colour = factor(reject_h0))) +
+  geom_point(aes(colour = factor(reject_H0))) +
   geom_ribbon(alpha = 0.1) +
   theme_minimal() +
   geom_hline(yintercept = 0, linetype = "longdash")
-```
 
-```{r}
 tau_hat_results %>% 
-  filter(reject_h0 == 1) %>% 
-  ggplot(aes(x = rank, y = predictions, ymin = prediction_lo, ymax = prediction_hi)) +
-  geom_point() +
-  geom_ribbon(alpha = 0.1)
+  filter(reject_H0 == 1) 
+
+
+tau_hat_results %>% 
+  ggplot(aes(sample = pval)) +
+  stat_qq(distribution = qunif)  +
+  geom_abline(intercept = 0, slope = 1) +
+  theme_minimal() +
+  scale_x_continuous(trans=negative_log_trans(10)) +
+  scale_y_continuous(trans=negative_log_trans(10)) +
+  labs(title = "QQ plot of P-values",
+       subtitle = "Negative Log(10) Scale")
   
 ```
+
+
+
+
+
 
 
 ## Classification
 
 
-```{r}
-library(magrittr)
-library(cluster)
-library(factoextra)
-library(recipes)
-
-
-
-trained_rec <- prep(rec_df, training = df_90_prepared)
-trained_rec
-
-df_90_scaled <- df_90_prepared %>% 
-  step_dummy(all(), -all_numeric())
-    
-res_HC <- df_90_scaled %>% 
-  dist(method = "euclidean") %>% 
-  hclust(method = "ward.D2")
-```
-
-
-
-```{r}
-k_m <- kmeans(df_90_scaled, 10, nstart = 20)
+```{r, eval = FALSE}
+k_m <- kmeans(test_data, 10, nstart = 20)
 k_m$cluster <- as.factor(k_m$cluster)
 
-ggplot(df_90_scaled, aes(x = m_age, y = week89m, colour = k_m$cluster)) +
+ggplot(test_data, aes(x = m_age, y = morekids, colour = k_m$cluster)) +
   geom_point()
-```
-
-
-visualising clusters
-```{r}
-fviz_dend(res_HC,
-          k = 4,
-          cex = 0.9,
-          k_colors = c("#2E9FDF", "#00AFBB", "#E7B800", "#FC4E07"),
-          color_labels_by_k = TRUE, # color labels by groups
-          rect = TRUE) # Add rectangle around groups)
-```
-
-
-
-# Recreating Table 5
-
-```{r}
-library(AER)
-library(broom)
-
-
-# worked_for_pay <- ivreg()
-
-weeks_worked <- ivreg(week89m ~ morekids | samesex,
-                      data = df_90_clean)
-weeks_worked %>% summary()
-
-
-hours_week <- ivreg(hour89m ~ morekids | samesex,
-                    data = df_90_clean)
-hours_week %>% summary()
-
-labour_income <- ivreg(incomem1 ~ morekids | samesex,
-                       data = df_90_clean)
-labour_income %>% summary()
-```
-
- 
-OLS of more than two kids on same sex 
-```{r}
-lm(morekids ~ samesex, data = df_90_clean) %>% summary()
-```
-
-
-```{r}
-lm(morekids ~ sexk + sex2ndk + samesex + agem,  data =  df_90_clean) %>% summary()
 ```
 
