--- a/cleaning A and E.Rmd
+++ b/cleaning A and E.Rmd
@@ -1,28 +1,29 @@
 ---
-title: "Cleaning Angrist and Evans 1998"
+title: "Detecting Defiers: An Empirical Investigation"
 author: "Ed Jee"
 date: "22 January 2019"
 output:
     html_document:
       code_folding: show
       highlight: tango
-      theme: readable
+      theme: journal
       toc: yes
       toc_float: yes
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE,
-                      cache = TRUE)
+                      cache = TRUE,
+                      message = FALSE,
+                      warning = FALSE)
 ```
 
-# Importing and cleaning Data
+# Data and Replication
 ## Angrist and Evans 1998
-### 1990 Census Data
+#### 1990 Census Data
 ```{r data_import}
 library(haven)
 library(dplyr)
-library(tidylog, warn.conflicts = FALSE)
 library(broom)
 df_90 <- read_sas("AngEv98/AngEv98/m_d_903.sas7bdat")
 ```
@@ -57,7 +58,7 @@ df_90_clean <- df_90 %>%
 rm(df_90)
 ```
 
-### 1980 Census Data
+#### 1980 Census Data
 
 
 ```{r cleaning_1980}
@@ -175,7 +176,7 @@ rm(df_80,
 
 
 
-# Replicating Results
+## Replicating Results
 
 ```{r data_transforming}
 
@@ -243,7 +244,7 @@ rm(df_90_clean, df_90_subset)
 ```
 
 
-## Table Two Summary Statistics
+#### Table Two Summary Statistics
 
 Trying to recreate table 2
 ```{r table_2}
@@ -290,7 +291,7 @@ AE_summary
 
 ```
 
-## Regression Results
+#### Regression Results
 
 Recreating Table 5
 ```{r table_5, results = "asis"}
@@ -394,6 +395,216 @@ rm(table_6_models_80, table_6_models_90)
 ```
 
 
+
+## Maimonides Rule
+
+
+Mention somewhere HAC instead of moulton factor adjustment - only makes a large difference in the discontinuity sample.
+
+#### Cleaning Grade 5
+```{r maimonides_grade_5}
+clean_maimonides_data <- function(dataset){
+  clean_df <- dataset %>%
+    mutate(
+      avgverb = ifelse(avgverb > 100, avgverb - 100, avgverb),
+      avgmath = ifelse(avgmath > 100, avgmath - 100, avgmath),
+      func1 = c_size/(as.integer((c_size-1)/40)+1),
+      func2 = cohsize/(as.integer(cohsize/40)+1),
+      avgverb = ifelse(verbsize == 0, NA, avgverb),
+      passverb = ifelse(verbsize == 0, NA, passverb),
+      avgmath = ifelse(mathsize == 0, NA, avgmath),
+      passmath = ifelse(mathsize == 0, NA, avgmath),
+      disc = (c_size >= 36 & c_size <= 45) | 
+             (c_size >= 76 & c_size <= 85) |
+             (c_size >= 116 & c_size <= 125),
+      all = 1,
+      c_size_squared = (c_size^2)/100,
+      trend = ifelse(c_size >= 0 & c_size <= 40, c_size, NA),
+      trend = ifelse(c_size >= 41 & c_size <= 80, 20 + (c_size/2), trend),
+      trend = ifelse(c_size >= 81 & c_size <= 120, (100/3) + (c_size/3), trend),
+      trend = ifelse(c_size >= 121 & c_size <= 160, (130/3) + (c_size/4), trend)
+    ) %>% 
+    filter(
+      classize > 1 & classize < 45 & c_size > 5
+    ) %>% 
+    filter(
+      c_leom == 1 & c_pik < 3
+    )
+  return(clean_df)
+  
+}
+df_final5_cleaned <- read_dta("Maimonides/final5.dta") %>% 
+  clean_maimonides_data()
+
+##do stuff
+
+
+```
+
+
+#### Cleaning Grade 4
+```{r maimonides_grade_4}
+df_final4_cleaned <- read_dta("Maimonides/final4.dta") %>% 
+  clean_maimonides_data()
+
+```
+
+
+## Replicating OLS 
+```{r replicating_maimonides, results = "asis"}
+## Grade 5
+col_1 <- lm(avgverb ~ classize, data = df_final5_cleaned)
+col_2 <- lm(avgverb ~ classize + tipuach, data = df_final5_cleaned)
+col_3 <- lm(avgverb ~ classize + tipuach + c_size, data = df_final5_cleaned)
+col_4 <- lm(avgmath ~ classize, data = df_final5_cleaned)
+col_5 <- lm(avgmath ~ classize + tipuach, data = df_final5_cleaned)
+col_6 <- lm(avgmath ~ classize + tipuach + c_size, data = df_final5_cleaned)
+## Grade 4
+col_7 <- lm(avgverb ~ classize, data = df_final4_cleaned)
+col_8 <- lm(avgverb ~ classize + tipuach, data = df_final4_cleaned)
+col_9 <- lm(avgverb ~ classize + tipuach + c_size, data = df_final4_cleaned)
+col_10 <- lm(avgmath ~ classize, data = df_final4_cleaned)
+col_11 <- lm(avgmath ~ classize + tipuach, data = df_final4_cleaned)
+col_12 <- lm(avgmath ~ classize + tipuach + c_size, data = df_final4_cleaned)
+
+SEs <- list(col_1,
+            col_2,
+            col_3,
+            col_4,
+            col_5,
+            col_6,
+            col_7,
+            col_8,
+            col_9,
+            col_10,
+            col_11,
+            col_12) %>% 
+  map(~(vcovHAC(.) %>% 
+          diag() %>% 
+          sqrt))
+
+stargazer(col_1,
+          col_2,
+          col_3,
+          col_4,
+          col_5,
+          col_6,
+          col_7,
+          col_8,
+          col_9,
+          col_10,
+          col_11,
+          col_12,
+          se = SEs,
+          omit.table.layout = "sn",
+          type = "html",
+          omit = "Constant",
+          dep.var.labels = c("English Comprehension",
+                             "Maths",
+                             "English Comprehension",
+                             "Maths"),
+          column.labels = c("Grade 5",
+                            "Grade 4"),
+          column.separate = c(6, 6),
+          initial.zero = FALSE,
+          notes = "HAC standard errors used instead of Moulton factor adjustment.")
+rm(col_1,
+   col_2,
+   col_3,
+   col_4,
+   col_5,
+   col_6,
+   col_7,
+   col_8,
+   col_9,
+   col_10,
+   col_11,
+   col_12
+   )
+```
+
+
+## Replicating IV
+```{r maimonides_IV, results = "asis"}
+
+## Grade 5
+
+
+iv_maim_verb_full_5 <- ivreg(avgverb ~ classize + tipuach + c_size + c_size_squared | func1 + tipuach + c_size + c_size_squared, data = df_final5_cleaned)
+iv_maim_math_full_5 <- ivreg(avgmath ~ classize + tipuach + c_size + c_size_squared | func1 + tipuach + c_size + c_size_squared, data = df_final5_cleaned)
+
+iv_maim_verb_disc_5 <- ivreg(avgverb ~ classize + tipuach + c_size + c_size_squared | func1 + tipuach + c_size + c_size_squared, data = df_final5_cleaned %>% filter(disc == 1))
+iv_maim_math_disc_5 <- ivreg(avgmath ~ classize + tipuach + c_size + c_size_squared | func1 + tipuach + c_size + c_size_squared, data = df_final5_cleaned %>% filter(disc == 1))
+
+
+## Grade 4
+
+iv_maim_verb_full_4 <- ivreg(avgverb ~ classize + tipuach + c_size + c_size_squared | func1 + tipuach + c_size + c_size_squared, data = df_final4_cleaned)
+iv_maim_math_full_4 <- ivreg(avgmath ~ classize + tipuach + c_size + c_size_squared | func1 + tipuach + c_size + c_size_squared, data = df_final4_cleaned)
+
+iv_maim_verb_disc_4 <- ivreg(avgverb ~ classize + tipuach + c_size + c_size_squared | func1 + tipuach + c_size + c_size_squared, data = df_final4_cleaned %>% filter(disc == 1))
+iv_maim_math_disc_4 <- ivreg(avgmath ~ classize + tipuach + c_size + c_size_squared | func1 + tipuach + c_size + c_size_squared, data = df_final4_cleaned %>% filter(disc == 1))
+
+
+
+
+SEs_IV_5 <- list(
+  iv_maim_verb_full_5,
+  iv_maim_math_full_5,
+  iv_maim_verb_disc_5,
+  iv_maim_math_disc_5
+) %>%
+  map(~(vcovHAC(.) %>% 
+          diag() %>% 
+          sqrt))
+stargazer(iv_maim_verb_full_5,
+          iv_maim_math_full_5,
+          iv_maim_verb_disc_5,
+          iv_maim_math_disc_5,
+          se = SEs_IV_5,
+          column.labels = c("Full Sample", "Discontinuity Sample"),
+          column.separate = c(2, 2),
+          type = "html",
+          title = "IV Maimonides Rule Fifth Grade",
+          notes = "HAC standard errors used instead of Moulton factor adjustment.")
+
+
+
+SEs_IV_4 <- list(
+  iv_maim_verb_full_4,
+  iv_maim_math_full_4,
+  iv_maim_verb_disc_4,
+  iv_maim_math_disc_4
+) %>%
+  map(~(vcovHAC(.) %>% 
+          diag() %>% 
+          sqrt))
+stargazer(iv_maim_verb_full_4,
+          iv_maim_math_full_4,
+          iv_maim_verb_disc_4,
+          iv_maim_math_disc_4,
+          se = SEs_IV_4,
+          column.labels = c("Full Sample", "Discontinuity Sample"),
+          column.separate = c(2, 2),
+          type = "html",
+          title = "IV Maimonides Rule Fourth Grade",
+          notes = "HAC standard errors used instead of Moulton factor adjustment.")
+
+rm(SEs_IV_4,
+   SEs_IV_5,
+   SEs,
+   iv_maim_math_disc_4,
+   iv_maim_math_full_4,
+   iv_maim_verb_disc_4,
+   iv_maim_verb_full_4,
+   iv_maim_math_disc_5,
+   iv_maim_math_full_5,
+   iv_maim_verb_disc_5,
+   iv_maim_verb_full_5)
+
+```
+
+
 # Checking First Stage
 ## Simulations
 
@@ -484,13 +695,12 @@ run_first_stage_interactions_fast <- function(dataset, dependent_variable, instr
   model_formula <- as.formula(paste0(dependent_variable,  "~ ", "instrument", "*."))
   first_stage_fit <- lm(data = dataset, formula = model_formula)
   degrees_freedom <- first_stage_fit$df.residual
-  dydx_margins <- dydx(data = dataset,
-                       model = first_stage_fit,
-                       variable = "instrument") %>% pull()
+  instrument_dummy_val <- dataset$instrument[1]
+  
   dataset_unique <- dataset %>% 
     select(-dependent_variable, -instrument) %>% 
     distinct() %>% 
-    mutate(instrument = TRUE)
+    mutate(instrument = instrument_dummy_val)
   first_stage_margins <- dydx(model = first_stage_fit, data = dataset_unique, variable = "instrument") 
   df_margins <- bind_cols(first_stage_margins %>% 
                             select(contains("dydx")),
@@ -511,7 +721,7 @@ run_first_stage_interactions_fast <- function(dataset, dependent_variable, instr
 ```
 
 
-
+## Angrist and Evans
 ```{r run_first_stage_AE}
 
 AE_data_80 <- df_80_final %>% 
@@ -694,8 +904,6 @@ first_stage_interactions_AE %>%
   geom_hline(yintercept = 0, linetype = "longdash")
 
 
-
-
 ```
 
 
@@ -730,11 +938,84 @@ first_stage_interactions_AE %>%
 
 ```
 
+## Maimonides Rule
 
+
+```{r maim_FS}
+first_stage_interactions_maim_5 <- df_final5_cleaned %>% 
+  select(classize,
+         tipuach,
+         c_size,
+         c_size_squared,
+         func1) %>% 
+  run_first_stage_interactions_fast(dataset = .,
+                                    dependent_variable = "classize",
+                                    instrument = "func1") %>% 
+  mutate(dataset = "Fifth Grade") %>% 
+  select(dydx_instrument, SE_dydx_instrument, pval_one_neg, pval_holm,  dataset, dydx_lo, dydx_hi)
+
+first_stage_interactions_maim_4 <- df_final4_cleaned %>% 
+  select(classize,
+         tipuach,
+         c_size,
+         c_size_squared,
+         func1) %>% 
+  run_first_stage_interactions_fast(dataset = .,
+                                   dependent_variable = "classize",
+                                   instrument = "func1") %>% 
+  mutate(dataset = "Fourth Grade") %>% 
+  select(dydx_instrument, SE_dydx_instrument, pval_one_neg, pval_holm, dataset, dydx_lo, dydx_hi)
+
+first_stage_interactions_maimonides <- bind_rows(first_stage_interactions_maim_5, first_stage_interactions_maim_4) 
+```
+
+
+
+```{r maim_plot}
+
+first_stage_interactions_maimonides %>% 
+  filter(pval_one_neg < 0.1 | pval_holm < 0.1)
+
+first_stage_interactions_maimonides %>% 
+  ggplot(aes(x = dydx_instrument, fill = dataset)) +
+  geom_histogram() +
+  facet_wrap(~dataset, scales = "free")
+
+first_stage_interactions_maimonides %>% 
+  ggplot(aes(x = pval_one_neg, fill = dataset)) +
+  geom_histogram() +
+  facet_wrap(~dataset, scales = "free")
+
+first_stage_interactions_maimonides %>% 
+  group_by(dataset) %>% 
+  arrange(dydx_instrument) %>% 
+  mutate(rank = row_number()) %>% 
+  ggplot(aes(x = rank, y = dydx_instrument, ymin = dydx_lo, ymax = dydx_hi)) +
+  geom_point(aes(colour = dataset)) +
+  geom_ribbon(alpha = 0.2) +
+  theme_minimal() +
+  facet_wrap(~dataset, scales = "free_x") +
+  geom_hline(yintercept = 0, linetype = "longdash")
+
+first_stage_interactions_maimonides %>% 
+  group_by(dataset) %>% 
+  ggplot(aes(sample = pval_one_neg, colour = dataset)) +
+  stat_qq(distribution = qunif) +
+  geom_abline(intercept = 0, slope = 1) +
+  theme_minimal() +
+  scale_x_continuous(trans=negative_log_trans(10)) +
+  scale_y_continuous(trans=negative_log_trans(10)) +
+  labs(title = "QQ plot of P-values First Stage Interactions",
+       subtitle = "Negative Log(10) Scale") +
+  facet_wrap(~dataset) +
+  geom_hline(yintercept = 0.05, linetype = "longdash", alpha = 0.2)
+
+
+```
 
 
 # Random Forest
-
+## Angrist and Evans
 
 ```{r random_forest_run}
 library(grf)
@@ -826,7 +1107,95 @@ tau_hat_results %>%
 ```
 
 
+## Maimonides Rule
 
 
+
+```{r rf_run_maimonides}
+
+X_matrix_maim_5 <- df_final5_cleaned %>% 
+  select(
+         tipuach,
+         c_size,
+         c_size_squared) %>% 
+  as.matrix()
+
+forest_first_stage_maim_5 <- causal_forest(X = X_matrix_maim_5,
+                                    Y = df_final5_cleaned$classize,
+                                    W = df_final5_cleaned$func1,
+                                    num.trees = 4000) 
+tau_hat_oob_maim_5 <- predict(forest_first_stage_maim_5, estimate.variance = TRUE) %>%
+  as_tibble() %>% 
+  mutate(dataset = "Fifth Grade")
+
+## Now fourth grade
+
+
+X_matrix_maim_4 <- df_final4_cleaned %>% 
+  select(
+         tipuach,
+         c_size,
+         c_size_squared) %>% 
+  as.matrix()
+
+forest_first_stage_maim_4 <- causal_forest(X = X_matrix_maim_4,
+                                    Y = df_final4_cleaned$classize,
+                                    W = df_final4_cleaned$func1,
+                                    num.trees = 4000) 
+tau_hat_oob_maim_4 <- predict(forest_first_stage_maim_4, estimate.variance = TRUE) %>%
+  as_tibble() %>% 
+  mutate(dataset = "Fourth Grade")
+
+
+tau_hat_oob_maimonides <- bind_rows(tau_hat_oob_maim_5,
+                                    tau_hat_oob_maim_4)
+```
+
+
+
+```{r rf_plot_maimonides}
+ggplot(tau_hat_oob_maimonides,
+       aes(x = predictions,
+           fill = dataset)) +
+  geom_histogram() +
+  facet_wrap(~dataset)
+
+tau_hat_results_maimonides <- tau_hat_oob_maimonides %>%
+  group_by(dataset) %>% 
+  arrange(predictions) %>% 
+  mutate(sigma_hat = sqrt(variance.estimates),
+         prediction_lo = predictions - 1.96*sigma_hat,
+         prediction_hi = predictions + 1.96*sigma_hat,
+         t_stat = predictions / sigma_hat,
+         critical_value = qt(0.95, N_obs - 13, lower.tail = FALSE),
+         pval = pt(t_stat, df = N_obs - 13),
+         pval_holm = p.adjust(pval, method = "holm"),
+         reject_H0 = ifelse(pval_holm < 0.05, 1, 0),
+         rank = row_number())
+
+tau_hat_results_maimonides %>% 
+  ggplot(aes(x = rank, y = predictions, ymin = prediction_lo, ymax = prediction_hi)) + 
+  geom_point(aes(colour = dataset)) +
+  geom_ribbon(alpha = 0.1) +
+  theme_minimal() +
+  geom_hline(yintercept = 0, linetype = "longdash") +
+  facet_wrap(~dataset) 
+
+tau_hat_results_maimonides %>% 
+  filter(reject_H0 == 1) 
+
+
+tau_hat_results_maimonides %>% 
+  ggplot(aes(sample = pval, colour = dataset)) +
+  stat_qq(distribution = qunif)  +
+  geom_abline(intercept = 0, slope = 1) +
+  theme_minimal() +
+  scale_x_continuous(trans=negative_log_trans(10)) +
+  scale_y_continuous(trans=negative_log_trans(10)) +
+  geom_hline(yintercept = 0.05, linetype = "longdash", alpha = 0.2) +
+  labs(title = "QQ plot of P-values",
+       subtitle = "Negative Log(10) Scale") +
+  facet_wrap(~dataset)
+```
 
 
